--- a/src/components/views/Login/Login.module.scss
+++ b/src/components/views/Login/Login.module.scss
@@ -2,4 +2,16 @@
 
 .component {
   padding: $base-size;
+  margin-top: 20px;
+}
+.paper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.avatar {
+  background-color: 'primary';
+}
+.form {
+  width: '100%'; 
 }
